--- a/styles/index.css
+++ b/styles/index.css
@@ -9,9 +9,45 @@
     flex-shrink: 0;
     border-radius: 16px;
     margin: 50px 135px;
+    background-color:border-radius: 16px;
 }
 .bannar-text{
-    text-align: center;
+text-align: center;
+}
+.bannar-text h1{
+    padding-top: 80px;
+    color: #FFF;
+font-family: Mulish;
+font-size: 64px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.bannar-text p{
+    padding: 0 247px 0;
+    color: #FFF;
+text-align: center;
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+ .bannar-btn{
+    margin: 10px 165px 0;
+    display: inline-flex;
+padding: 16px;
+align-items: flex-start;
+gap: 24px;
+border-radius: 8px;
+background: rgba(255, 255, 255, 0.30);
+}
+.bannar-btn button{
+    width: 174px;
+    height: 52px;
+    flex-shrink: 0;
+    border-radius: 8px;
+background: #FFF;
 }
 nav{
     margin: 50px 135px;
@@ -19,6 +55,9 @@ nav{
 }
 nav h1{
     margin-left: 10px;
+}
+nav h1 span{
+    color: #FF5400;
 }
 nav img{
     width: 48px;
@@ -36,6 +75,18 @@ gap: 44px;
 nav li{
     text-decoration: none;
     list-style: none;
+}
+nav li a{
+    text-decoration: none;
+    color: #424247;
+font-family: Mulish;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+nav li a span{
+    color: #FF5400;
 }
 .btn{ 
     color: #FFFFFF;
@@ -69,24 +120,146 @@ border-radius: 16px;
 .destination-text{
     text-align: center;
 }
+.mal{
+    background-image: url(../Images/Rectangle\ 5.png);
+    width: 573px;px;
+    height: 300px;
+    flex-shrink: 0;
+}
+.mal h3{
+    margin: 132px 227px;
+    color: #FFF;
+text-align: center;
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.ind{
+    background-image: url(../Images/Rectangle\ 8.png);
+    width: 573px;px;
+    height: 300px;
+    flex-shrink: 0;
+}
+.ind h3{
+    margin: 132px 220px;
+    color: #FFF;
+text-align: center;
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.row-a{
+    display: flex;
+    border-radius: 16px;
+    gap: 24px;
+}
+.row-b{
+    margin: 24px 0;
+    gap: 24px;
+    display: flex;
+}
 .row{
     display: flex;
-    width: 573px;px;
+border-radius: 16px;
+gap: 24px;
+}
+.bd{
+    background-image: url(../Images/Rectangle\ 11.png);
+    width: 473px;
 height: 300px;
 flex-shrink: 0;
-gap: 24px;
-margin-bottom: 24px;
+}
+.bd h3{
+    margin: 132px 156px;
+    color: #FFF;
+text-align: center;
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.ban{
+    background-image: url(../Images/Rectangle\ 10.png);
+    width: 673px;
+height: 300px;
+flex-shrink: 0;
+}
+.ban h3{
+    margin: 132px 260px;
+    color: #FFF;
+text-align: center;
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.sri{
+background-image: url(../Images/Rectangle\ 6.png);
+width: 374px;
+height: 286px;
+flex-shrink: 0;
+}
+.sri h3{
+    margin:125px 130px ;
+    color: #FFF;
+text-align: center;
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.north{
+    background-image: url(../Images/Rectangle\ 7.png);
+    width: 474px;
+height: 286px;
+flex-shrink: 0;
+}
+.north h3{
+    margin: 125px 137px;
+    color: #FFF;
+text-align: center;
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.kash{
+    background-image: url(../Images/Rectangle\ 9.png);
+    width: 274px;
+height: 286px;
+flex-shrink: 0;
+}
+.kash h3{
+    margin:125px 80px ;
+    color: #FFF;
+text-align: center;
+font-family: Mulish;
+font-size: 28px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
 }
 .why{
-    text-align: center;
     margin: 50px 135px;
+}
+.why-text{
+    text-align: center;
 }
 .row-1{
     display: flex;
     gap: 24px;
 }
 .hotel{
-    width: 573px;
+    padding: 32px 32px;
+    width: 510px;
 height: 284px;
 flex-shrink: 0;
 border-radius: 16px;
@@ -94,7 +267,8 @@ border: 1px solid rgba(251, 181, 99, 0.20);
 background: rgba(251, 181, 99, 0.05);
 }
 .location{
-    width: 573px;
+    padding: 32px 32px;
+    width: 510px;
 height: 284px;
 flex-shrink: 0;
 border-radius: 16px;
@@ -102,9 +276,10 @@ border: 1px solid rgba(41, 206, 246, 0.20);
 background: rgba(41, 206, 246, 0.05);
 }
 .price{
+    padding: 32px 32px;
     margin: auto;
     margin-top: 24px;
-    width: 573px;
+    width: 510px;
 height: 284px;
 flex-shrink: 0;
 border-radius: 16px;
@@ -113,7 +288,33 @@ background: rgba(233, 68, 68, 0.05);
 }
 .discount{
     margin: 50px 135px;
-    gap: 24px;
+    margin-top: 24px;
+}
+.discount-text{
+    text-align: center;
+}
+.discount-text p{
+    margin-left: 300px;
+    width: 700px;
+    height: 52px;
+    color: rgba(19, 19, 24, 0.70);
+text-align: center;
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+.see{
+    margin-left: 500px;
+    text-align: center;
+    color:#FFFFFF ;
+    margin-top:30px ;
+    width: 210px;
+height: 52px;
+flex-shrink: 0;
+border-radius: 8px;
+background: #FF5400;
 }
 .discount-text-1{
     background-image: url(../Images/Group\ 39.png);
@@ -130,14 +331,17 @@ border-radius: 8px;
 background: #FF5400;
 }
 .card{
-    margin-top: 30px;
+    padding: 10px 20px;
     margin: 56px 56px 55px 535px;
     width: 579px;
     height: 389px;
     flex-shrink: 0;
-    border-radius: 16px;
+    border-radius:16px;
     background-color:#FFFFFFCC ;
     border: 2px solid #FFFFFF;
+}
+.card h4{
+    color: #FF5400;
 }
 .discount-text-2{
     background-image: url(../Images/Group\ 40.png);
@@ -150,14 +354,6 @@ background: #FF5400;
     width: 1170px;
     height: 500px;
     flex-shrink: 0;
-}
-.btn-2{
-    background-color: #FF5400;
-    width: 210px;
-height: 52px;
-flex-shrink: 0;
-border-radius: 8px;
-margin: 14px 34px 13px 35px;
 }
 .news{
     margin: 50px 135px;
@@ -195,6 +391,7 @@ height: 422px;
 flex-shrink: 0;
 }
 .letter-text{
+    text-align: center;
     margin: 250px 0.48px 0.14px 340px;
     width: 324px;
 height: 120px;
@@ -202,6 +399,24 @@ border-radius: 16px;
 background: #FF5400;
 transform: rotate(-19.628deg);
 flex-shrink: 0;
+}
+.letter-text p{
+    padding-top: 10px;
+    color: #FFF;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.letter-text h3{
+    color: #FFF;
+font-family: Mulish;
+font-size: 32px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
 }
 .end{
     text-align: center;
@@ -220,6 +435,15 @@ background: rgba(19, 19, 24, 0.05);
 height: 24px;
 flex-shrink: 0;
 }
+.end-1 p{
+    margin: 0 200px 20px;
+    color: #5A5A5D;
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
 hr{
     width: 872px;
 height: 0;
@@ -229,9 +453,114 @@ background:#1313181A;
     justify-content: center;
     display: flex;
 }
+.h3 h3 span{
+    color: #FF5400;
+}
 .h3 img{
     margin-right: 10px;
     width: 40px;
 height: 46.673px;
 flex-shrink: 0;
+}
+@media screen and (max-width: 576px) {
+    .bannar{
+        margin: 10px;
+     width: auto;
+    }
+    nav{
+        margin: 10px;
+    }
+    .bannar-text h1{
+        font-size: 22px;
+    }
+    .bannar-text p{
+        padding: 0;
+    }
+    .bannar-btn{
+        margin: 20px;
+        flex-direction: column;
+        display: flex;
+flex-direction: column;
+align-items: flex-start;
+gap: 16px;
+    }
+    .bannar-btn button{
+        height: auto;
+    }
+    main{
+        margin: 10px;
+        max-width: 500px;
+    }
+    .popular{
+        margin:10px ;
+        flex-direction: column;
+        gap: 0;
+    }
+    .popular-text{
+        width: auto;
+    }
+    .popular-img{
+        width: auto;
+    }
+    .destination{
+        margin: auto;
+    }
+    .row-a{
+        flex-direction: column;
+    }
+    .mal{
+        width: 100%;
+    }
+    .mal h3{
+    margin-top: 132px;
+    }
+    .ind{
+        width: auto;
+    }
+    .row-b{
+        flex-direction: column;
+    }
+    .row{
+        flex-direction: column;
+    }
+    .ban{
+        width: auto;
+    }
+    .why{
+        margin: 10px;
+    }
+    .row-1{
+        flex-direction: column;
+    }
+    .hotel{
+        width: auto;
+    }
+    .location{
+        width: auto;
+    }
+    .price{
+        width: auto;
+    }
+    .discount{
+        margin: 10px;
+    }
+    .discount-text p{
+        width: auto;
+        height: auto;
+        margin: auto;
+    }
+    .discount-text-1{
+        width: auto;
+    }
+    .card{
+        width: auto;
+        margin: 10px; 
+        padding: 10px;
+    }
+    .discount-text-2{
+        width: auto;
+    }
+    .discount-text-3{
+        width: auto;
+    }
 }
